2008-10-24  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        - test for https://bugs.webkit.org/show_bug.cgi?id=21851
          <rdar://problem/6304151> REGRESSION (r36513): Crash when removing a widget with percent height

        * fast/replaced/percent-height-in-anonymous-block-widget.html: Added.
        * platform/mac/fast/replaced/percent-height-in-anonymous-block-widget-expected.checksum: Added.
        * platform/mac/fast/replaced/percent-height-in-anonymous-block-widget-expected.png: Added.
        * platform/mac/fast/replaced/percent-height-in-anonymous-block-widget-expected.txt: Added.

2008-10-24  David Kilzer  <ddkilzer@apple.com>

        Rolled out r37840.

        * geolocation/geolocation-not-implemented-expected.txt: Removed.
        * geolocation/geolocation-not-implemented.html: Removed.
        * geolocation/geolocation-test.js: Removed.

2008-10-23  Greg Bolsinga  <bolsinga@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=21475
        
        Provide support for the Geolocation API
        
        http://dev.w3.org/geo/api/spec-source.html

        Tests to verify Geolocation isn't implemented (so that it didn't leak into 
        WebCore for platforms that do not support it).

        * geolocation: Added.
        * geolocation/geolocation-not-implemented-expected.txt: Added.
        * geolocation/geolocation-not-implemented.html: Added.
        * geolocation/geolocation-test.js: Added.
        (reset):
        (hanged):
        (watchPositionAndEnd):
        (watchPosition._positionCallback):
        (watchPosition):
        (watchPositionTestAndEnd):
        (watchPositionAndFail):
        (watchPositionAndTest._positionCallback):
        (watchPositionAndTest):
        (getCurrentPositionAndEnd):
        (getCurrentPosition._positionCallback):
        (getCurrentPosition):
        (getCurrentPositionTestAndEnd):
        (getCurrentPositionAndFail):