@@ -4,6 +4,14 @@ var staticWindowProperties = [
     'CSSRule',
     'CSSStyleDeclaration',
     'CSSValue',
+    'CSSCharsetRule',
+    'CSSImportRule',
+    'CSSMediaRule',
+    'CSSFontFaceRule',
+    'CSSPageRule',
+    'CSSVariablesRule',
+    'WebKitCSSKeyframeRule',
+    'WebKitCSSKeyframesRule',
     'DOMException',
     'DOMParser',
     'Document',
