@@ -12,6 +12,14 @@ PASS var object = window['CSSPrimitiveValue']; isEqualJS(object, object); is tru
 PASS var object = window['CSSRule']; isEqualJS(object, object); is true
 PASS var object = window['CSSStyleDeclaration']; isEqualJS(object, object); is true
 PASS var object = window['CSSValue']; isEqualJS(object, object); is true
+PASS var object = window['CSSCharsetRule']; isEqualJS(object, object); is true
+PASS var object = window['CSSImportRule']; isEqualJS(object, object); is true
+PASS var object = window['CSSMediaRule']; isEqualJS(object, object); is true
+PASS var object = window['CSSFontFaceRule']; isEqualJS(object, object); is true
+PASS var object = window['CSSPageRule']; isEqualJS(object, object); is true
+PASS var object = window['CSSVariablesRule']; isEqualJS(object, object); is true
+PASS var object = window['WebKitCSSKeyframeRule']; isEqualJS(object, object); is true
+PASS var object = window['WebKitCSSKeyframesRule']; isEqualJS(object, object); is true
 PASS var object = window['DOMException']; isEqualJS(object, object); is true
 PASS var object = window['DOMParser']; isEqualJS(object, object); is true
 PASS var object = window['Document']; isEqualJS(object, object); is true
