@@ -12,6 +12,14 @@ PASS var object = window['CSSPrimitiveValue']; isEqualObjC(object, object); is t
 PASS var object = window['CSSRule']; isEqualObjC(object, object); is true
 PASS var object = window['CSSStyleDeclaration']; isEqualObjC(object, object); is true
 PASS var object = window['CSSValue']; isEqualObjC(object, object); is true
+PASS var object = window['CSSCharsetRule']; isEqualObjC(object, object); is true
+PASS var object = window['CSSImportRule']; isEqualObjC(object, object); is true
+PASS var object = window['CSSMediaRule']; isEqualObjC(object, object); is true
+PASS var object = window['CSSFontFaceRule']; isEqualObjC(object, object); is true
+PASS var object = window['CSSPageRule']; isEqualObjC(object, object); is true
+PASS var object = window['CSSVariablesRule']; isEqualObjC(object, object); is true
+PASS var object = window['WebKitCSSKeyframeRule']; isEqualObjC(object, object); is true
+PASS var object = window['WebKitCSSKeyframesRule']; isEqualObjC(object, object); is true
 PASS var object = window['DOMException']; isEqualObjC(object, object); is true
 PASS var object = window['DOMParser']; isEqualObjC(object, object); is true
 PASS var object = window['Document']; isEqualObjC(object, object); is true
