@@ -1,3 +1,15 @@
+2008-10-24  Simon Fraser  <simon.fraser@apple.com>
+
+        Reviewed by Darin Adler
+
+        https://bugs.webkit.org/show_bug.cgi?id=21858
+        
+        Add additional CSSRule types to the DOM-wrapper tests.
+        
+        * fast/dom/resources/wrapper-identity-base.js:
+        * fast/dom/wrapper-identity-expected.txt:
+        * platform/mac/fast/dom/objc-wrapper-identity-expected.txt:
+
 2008-10-24  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Sam Weinig.
